# EntityLinking

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  start_containers.sh  start_neo4j.sh  start_redis.sh  stop_containers.sh  stop_neo4j.sh  stop_redis.sh  wikidata_api.py  wikidata_attributes.py  wikidata_graph.py
.github/workflows/: pythonapp.yml
entity_linking/: classification_report.py  create_db.py  database_api.py  entity_classifier.py  graph_wikidata.py  load_test_data.py  run_classification.py  simple_entity_classifier.py  tokenizer.py  utils.py  wikidata_api.py  wikidata_db_api.py  wikidata_graph.py  wikidata_web_api.py  wikipedia_api.py
entity_linking/grammar/: analysis.py  range.py  token.py
entity_linking/maintenance/: logger.py
entity_linking/parser/: parser.py  stemmer.py  tokenizer.py
entity_linking/wiki/: api.py  data_processor.py  entity.py  graph.py
tests/: conftest.py  test_api.py  test_graph.py  test_utils.py  test_wikidata_api.py  test_wikidata_graph.py
tests/grammar/: test_analysis.py  test_range.py  test_token.py
tests/parser/: test_parser.py  test_stemmer.py  test_tokenizer.py
tests/wiki/: test_api.py  test_entity.py  test_graph.py
