[tool.poetry]
name = "entitylinking"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
wikidata = "^0.6.1"
networkx = "^2.4"
matplotlib = "^3.1"
requests = "^2.22"
scipy = "^1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
